# user-service/src/routes/userRoutes.js
@@ -1,0 +1,16 @@
+const express = require('express');
+const router = express.Router();
+const { protect } = require('../middlewares/authMiddleware');
+const userController = require('../controllers/userController');
+
+// All routes here start with /api/users
+router.get('/me', protect, userController.getMyProfile);
+router.patch('/me', protect, userController.updateUserProfile); // UPDATE PROFILE
+router.get('/:username', protect, userController.getUserByUsername);
+
+
+router.post('/:id/follow', protect, userController.toggleFollow);
+router.get('/:id/followers', protect, userController.getUserFollowers);
+router.get('/:id/following', protect, userController.getUserFollowing);
+
+module.exports = router;
